Make sure repository triple dot menu only visible during hover

--- a/static/base.css
+++ b/static/base.css
@@ -1840,21 +1840,15 @@ select.form-control{
     list-style-type: none;
 }
 
-#repositoryList ul.repositories i.material-symbols-outlined.md-18 {
-    position: relative;
-    top: 4px;
-    font-size: 22px;
-}
-
-#repositoryList ul.repositories .repo-actions i.material-symbols-outlined.md-18 {
+#repositoryList ul.repositories .repo-actions button {
     visibility: hidden;
 }
 
-#repositoryList ul.repositories .repoFile:hover .repo-actions i.material-symbols-outlined.md-18 {
+#repositoryList ul.repositories .repoFile:hover .repo-actions button {
     visibility: visible;
 }
 
-#repositoryList ul.repositories .repoContainer:hover .repo-actions i.material-symbols-outlined.md-18 {
+#repositoryList ul.repositories .repoContainer:hover .repo-actions button {
     visibility: visible;
 }
 
